--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/item_circular_color_bmi_background"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="1dp"
         android:padding="10dp"
         android:text="@string/information"
         android:textColor="@color/black"
@@ -218,7 +218,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cl_metric"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:padding="10dp"
             android:visibility="invisible"
@@ -269,9 +269,9 @@
             android:layout_below="@+id/llDisplayBMIResult"
             android:layout_gravity="bottom"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="8dp"
             android:backgroundTint="@color/blue"
             android:text="Hisoblash"
             android:textAlignment="center"
@@ -280,5 +280,18 @@
             tools:ignore="RtlCompat" />
 
     </RelativeLayout>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-8558811277281829/7519195773"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
+    </com.google.android.gms.ads.AdView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
