--- a/app/src/main/res/layout/fragment_finish.xml
+++ b/app/src/main/res/layout/fragment_finish.xml
@@ -62,6 +62,18 @@
             android:text="Tugatish"
             android:textSize="20sp" />
 
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            app:adSize="BANNER"
+            app:adUnitId="ca-app-pub-8558811277281829/7519195773">
+
+
+        </com.google.android.gms.ads.AdView>
+
     </LinearLayout>
 
 
