--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -24,7 +24,7 @@
         <ImageView
             android:id="@+id/gif"
             android:layout_width="0dp"
-            android:layout_height="150dp"
+            android:layout_height="140dp"
             android:layout_weight="2" />
 
         <ImageView
@@ -36,7 +36,7 @@
         <ImageView
             android:id="@+id/gif1"
             android:layout_width="0dp"
-            android:layout_height="150dp"
+            android:layout_height="140dp"
             android:layout_weight="2" />
 
     </LinearLayout>
@@ -45,7 +45,6 @@
         android:id="@+id/intro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:padding="1dp"
         android:text="@string/about"
         android:textColor="@color/white"
@@ -59,11 +58,24 @@
     <ImageView
         android:id="@+id/gif2"
         android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/intro"
         app:layout_constraintVertical_bias="0.19999999" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-8558811277281829/7519195773"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
+    </com.google.android.gms.ads.AdView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
