--- a/app/src/main/res/menu/welcome_menu.xml
+++ b/app/src/main/res/menu/welcome_menu.xml
@@ -7,4 +7,9 @@
         android:title="Info"
         android:icon="@drawable/ic_info"
         app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/share"
+        android:title="Info"
+        android:icon="@drawable/ic_share"
+        app:showAsAction="ifRoom"/>
 </menu>
